compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__bit_string_segment_conflicting_options_int.snap
---
source: compiler-core/src/type_/tests/errors.rs
assertion_line: 172
expression: "let x = <<1:int-binary>> x"

---
error: Invalid bit string segment
  ┌─ /src/one/two.gleam:1:17
  │
1 │ let x = <<1:int-binary>> x
  │                 ^^^^^^ This is an extra type specifier.

Hint: This segment already has the type int.
See: https://gleam.run/book/tour/bit-strings.html

